--- a/templates/restaurantLogin.html
+++ b/templates/restaurantLogin.html
@@ -70,7 +70,7 @@
                             {% endif %}
                         </form>
                         
-                        <a href="/restaurantHome">Go back</a>
+                        <a href="/">Go back</a>
                 </div>
 
             </div>
